[tool.poetry]
name = "umd_challenge2"
version = "0.1.0"
description = ""
authors = ["Ebenezer Dadson <edadson001@gmail.com>"]
readme = "README.md"
packages = [{include = "umd_challenge2"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
